stretching fixed

--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,12 @@ flex-basis:auto;
 border: 1px solid green;
 position:relative;
 overflow: hidden;
+
 }
 
 .card img {
   width:100%;
+  height:100%;
 }
 
 @media only screen and (min-width: 768px) {
